5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpappsec-cp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
   - hosts:
      - wordpress.domain.com
     secretName: store-secret
  rules:
  - host: wordpress.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: juice-shop
             port:
               number: 8080
